# SecPi

./: .gitignore  LICENSE.txt  README.md  Vagrantfile  config.json  install.sh  install.txt  logging.conf  pyproject.toml  requirements.txt  startup.sh
.ci/: mosquitto.conf
.github/workflows/: tests.yml
bootstrap/: pgsql.sh
contrib/: example_data.py  favicon.psd  gpio_test.py  recordvideo.py
contrib/rabbitmq/: auth.py
doc/: backlog.rst  handbook.rst  sandbox.rst
etc/development/: config-manager.json  config-manager.toml  config-web.json  config-web.toml  config-worker.json  config-worker.toml
etc/production/: config-manager.json  config-manager.toml  config-web.json  config-web.toml  config-worker.json  config-worker.toml  logging.conf  rabbitmq.config
etc/testing/: config-manager.json  config-manager.toml  config-web.json  config-web.toml  config-worker.json  config-worker.toml  logging.conf
management/: config.json  manager.py
management/db/: objects.py  test.py
manager/: README.md  config.json  dropbox_dropper.py  mailer.py  manager.py  sipcall.py  slack.py  sms.py  spark.py  twitter.py
packaging/init/: secpi-webinterface  secpi-webinterface.service
packaging/scripts/: openssl.cnf  renew_cert.sh
scripts/: gen_cert.sh  install.sh  openssl.cnf  rabbitmq.config  renew_cert.sh  secpi-manager  secpi-manager.service  secpi-webinterface  secpi-webinterface.service  secpi-worker  secpi-worker.service
secpi/: __init__.py  manager.py  webinterface.py  worker.py
secpi/action/: buzzer.py  ffmpegvideo.py  speaker.py  test.py  webcam.py
secpi/model/: action.py  constants.py  dbmodel.py  message.py  notifier.py  sensor.py  service.py  settings.py
secpi/notifier/: dropbox.py  mailer.py  sipcall.py  slack.py  sms.py  spark.py  twitter.py
secpi/sensor/: adam6000.py  gpio.py  network.py  pinger.py  system.py
secpi/util/: amqp.py  cli.py  common.py  config.py  database.py  web.py
secpi/web/: base_webpage.py  mako_template_tool.py
secpi/web/page/: actionparams.py  actions.py  alarmdata.py  alarms.py  baserelationshippage.py  logs.py  notifierparams.py  notifiers.py  sensorparams.py  sensors.py  setups.py  setupszones.py  workers.py  workersactions.py  zones.py
secpi/web/sites/: __init__.py  notifiers.py  sensors.py  setupszones.py  workers.py
secpi/web/static/css/: mobile.css
secpi/web/static/html/: confirm-delete.html  edit-popover.html  export.html  import.html  table-popover.html
secpi/web/static/js/: app.js  bootstrap.min.js
secpi/web/templates/: 401.mako  404.mako  actions.mako  activate.mako  notifiers.mako  rel.mako  setups.mako  workers.mako
stuff/: database.py  example_data.py  gpio_sensor.py  gpio_test.py  mobile.css  recordvideo.py  secpi-logo.ai
stuff/homebridge/: index.js
stuff/rabbitmq/: auth.py  info
stuff/webui_design/: activate.html  main.css  main.html
testing/: conftest.py  test_action_buzzer.py  test_action_ffmpegvideo.py  test_action_speaker.py  test_action_testaction.py  test_action_webcam.py  test_manager.py  test_notifiers.py  test_sensor_adam6000.py  test_sensor_gpio.py  test_sensor_pinger.py  test_sensor_system.py  test_sensor_tcpportlistener.py  test_sensor_temperature.py  test_settings.py  test_system.py  test_webinterface.py  test_worker.py
testing/etc/: config-manager.json  config-web.json  config-worker.json  logging.conf
testing/model/: test_dbmodel.py
testing/modules/: test_action_buzzer.py  test_action_ffmpegvideo.py  test_action_speaker.py  test_action_testaction.py  test_action_webcam.py  test_notifiers.py  test_sensor_adam6000.py  test_sensor_gpio.py  test_sensor_network.py  test_sensor_pinger.py  test_sensor_system.py
testing/util/: common.py  events.py  process.py  service.py
tools/: action.py  actor.py  amqp.py  base.py  cli.py  config.json  config.py  notifier.py  sensor.py  testing.py  utils.py
tools/db/: database.py  example_data.py  objects.py  setup.py  test.py
webinterface/: actionparams.py  actions.py  alarms.py  base_webpage.py  config.json  create_htdigest.sh  logs.py  main.py  mako_template_tool.py  sensors.py  setups.py  workers.py  zones.py
webinterface/sites/: actionparams.py  actions.py  alarmdata.py  alarms.py  baserelationshippage.py  logs.py  notifierparams.py  notifiers.py  params.py  sensorparams.py  sensors.py  setups.py  setupszones.py  workers.py  workersactions.py  zones.py
webinterface/static/css/: bootstrap-theme.css  bootstrap-theme.min.css  bootstrap.css  bootstrap.min.css  jquery-ui.css  jquery-ui.min.css  jquery-ui.structure.min.css  jquery-ui.theme.css  jquery-ui.theme.min.css  main.css  mobile.css
webinterface/static/html/: alarmdata-dialog.html  angular-edit.html  confirm-delete.html  confirm-rel-delete.html  dropdown-template.html  import.html  rel-edit.html  rel-table-popover.html
webinterface/static/js/: app.js  bootstrap.js  jquery-ui.js
webinterface/templates/: 500.mako  actionparams.mako  actions.mako  activate.mako  add.mako  alarmdata.mako  alarms.mako  angular_edit.mako  change_credentials.mako  index.mako  list.mako  logs.mako  main.mako  nav.mako  notifiers.mako  rel.mako  sensors.mako  setups.mako  subnav.mako  test.mako  update.mako  workers.mako  zones.mako
worker/: README.md  adam6000.py  advantech_adam.py  buzzer.py  config.json  config_backup.json  ffmpegvideo.py  gpio_sensor.py  pinger.py  speaker.py  tcpportlistener.py  temperature_sensor.py  testaction.py  webcam.py  worker.py
